# forcepad

./: .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README  README.md  ROADMAP.md  configure_forcepad  configure_forcepad.cmd  fix_bundle_deps  fpbuild.cmd  vcpkg.json
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: eng_manual_2_4.docx  illustrations.vsd  sv_instruktion_2_4.docx  zensical.toml
examples/: README.md
images/: action_add_bc2_black.xpm  action_add_force_black.pspimage  action_remove_bc2_black.xpm  bc2_black.xpm  bc_hinge_black.pspimage  brush4.xpm  logo.ai  (+18 more)
src/calfem/: CMakeLists.txt  calfem.cpp  calfem.h
src/calfemcxx/: CMakeLists.txt  calfem.cpp  calfem.h  calfem_newmat.cpp
src/common/: CGIndicator.cpp  CGIndicator.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  Constraint.cpp  Constraint.h  ConstraintSelection.cpp  ConstraintSelection.h  Element.cpp  Element.h  ElementGrid.cpp  ElementGrid.h  ElementGridCell.cpp  ElementGridCell.h  FemGrid.cpp  FemGrid.h  FemGrid2.cpp  FemGrid2.h  FemGridSolver2.cpp  FemGridSolver2.h  Fl_ColorBox.cpp  Fl_Cursor_Shape.H  Fl_Cursor_Shape.cxx  Force.cpp  Force.h  ForcePadClipboard.cpp  ForcePadClipboard.h  ForceSelection.cpp  ForceSelection.h  ImageGrid.cpp  ImageGrid.h  ImageGrid2.cpp  ImageGrid2.h  LogWindow.cpp  LogWindow.fl  LogWindow.h  NewModelDlg.cpp  NewModelDlg.h  Node.cpp  (+12 more)
src/forcepad/: BcTypes.cpp  BrushProps.cpp  BrushProps.h  CMakeLists.txt  CalcProps.cpp  CalcProps.h  CalcSettings.cpp  CalcSettings.fl  CalcSettings.h  DrawingProps.cpp  DrawingProps.fl  DrawingProps.h  DrawingTools.cpp  DrawingTools.fl  DrawingTools.h  FemGridSolver.cpp  FemGridSolver.h  FemGridSolver2.cpp  FemGridSolver2.h  FlPaintView.cpp  FlPaintView.h  GeneralSettings.cpp  GeneralSettings.fl  GeneralSettings.h  ImportProps.cpp  ImportProps.fl  ImportProps.h  MainFrame2.cpp  MainFrame2.fl  MainFrame2.h  MainFrame2_kiosk.cpp  MainFrame2_kiosk.fl  MainFrame2_kiosk.h  OptSettings.cpp  OptSettings.fl  OptSettings.h  PaintView.cpp  PaintView.h  PlatformInfo.cpp  PlatformInfo.h  (+17 more)
src/forcepad_kiosk/: CMakeLists.txt
src/qtforcepad/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  CalcSettingsDialog.cpp  CalcSettingsDialog.h  GeneralSettingsDialog.cpp  GeneralSettingsDialog.h  OptimisationSettingsDialog.cpp  OptimisationSettingsDialog.h  PaintView.cpp  PaintView.h  QtLogSink.h  app.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtforcepad.qrc  qtpaintview.cpp  qtpaintview.h
tags/2_3_0_BETA_3/src/forcepad/: BcTypes.cpp  CMakeLists.txt  FemGridSolver.cpp  FemGridSolver.h  ImportProps.cpp  MainFrame2.cpp  PaintView.h  StiffnessProps.fl
tags/2_4_0/src/forcepad_r/: BrushProps.fl  Makefile.am  PaintView.cpp  SplashFrame.fl
tags/2_4_0_BETA_1/src/common/: CMakeLists.txt  ImageGrid2.h  NewModelDlg.fl  Ruler.cpp  fl_ask_win.cpp  fl_file_chooser_win.cpp
tags/2_4_0_BETA_1/src/common/obsolete/: StatusDlg.fl
tags/2_4_0_BETA_3/src/opt_solver/: CMakeLists.txt  ElementProperty.h  RFemBase.h
tags/2_4_1/src/ivf2d/: Ellipse.cpp  Image.h  Makefile.am  Vec3d.cpp
trunk/: AUTHORS  CMakeLists.txt  configure.cmd  configure_forcepad  configure_forcepad.cmd
trunk/docs/: eng_manual_2_4.docx  sv_instruktion_2_4.docx
trunk/images/: action_add_bc2_black.xpm  action_add_force_black.xpm  action_mode_black.xpm  action_mode_inactive.xpm  action_move_force_black.xpm  action_remove_bc2_black.xpm  action_remove_force_black.xpm  action_rotate_force_black.xpm  additional2.xpm  bc2_black.psp  bc_hinge_black.xpm  colormap1.pspimage  compression_black.pspimage  compression_black.xpm  copy_black.xpm  dead_load_black.psp  dead_load_black.xpm  drawing_tools.xpm  force_black.psp  force_black.xpm  forcepad_icon.icns  no_opt_black.pspimage  physics_mode_inactive.xpm  rectangle.xpm  ruler_black.pspimage  select_pointer_black.pspimage  stress2_black.pspimage  tension.xpm  tension_black.pspimage  tension_black.xpm  tension_compression_black.xpm  undo_black.pspimage
trunk/install/win32/: forcepad2.iss
trunk/install/win32/Styles/: WinXP.Luna.cjstyles
trunk/src/: CMakeLists.txt
trunk/src/calfemcxx/: calfem.cpp  calfem.h  calfem_eigen.cpp
trunk/src/common/: CGIndicator.cpp  Constraint.cpp  Element.h  ElementGrid.h  FemGrid.h  FemGrid2.cpp  FemGrid2.h  Fl_Cursor_Shape.cxx  Force.cpp  ImageGrid.cpp  ImageGrid2.cpp  ImageGrid2.h  LogWindow.cpp  LogWindow.h  NewModelDlg.h  ReactionForce.cpp  Ruler.cpp  Ruler.h  SystemInfo.cpp  SystemInfo.h  UiSettings.cpp  fl_file_chooser_win.cpp  so_format.h
trunk/src/forcepad/: BcTypes.fl  BcTypes.h  BrushProps.h  CMakeLists.txt  CalcProps.fl  CalcSettings.cpp  CalcSettings.fl  CalcSettings.h  FemGridSolver.cpp  FemGridSolver2.cpp  FemGridSolver2.h  FlPaintView.cpp  FlPaintView.h  GeneralSettings.cpp  GeneralSettings.fl  GeneralSettings.h  MainFrame2.cpp  MainFrame2.fl  MainFrame2.h  MainFrame2_kiosk.cpp  MainFrame2_kiosk.fl  MainFrame2_kiosk.h  OptSettings.cpp  OptSettings.fl  OptSettings.h  PaintView.cpp  PaintView.h  PlatformInfo.cpp  SplashFrame.cpp  SplashFrame.fl  SplashFrame.h  TabletToolbar.cpp  TabletToolbar.fl  TabletToolbar.h  TabletToolbar_kiosk.cpp  TabletToolbar_kiosk.fl  TabletToolbar_kiosk.h  VizMixerToolbar.cpp  VizMixerToolbar.fl  VizMixerToolbar.h  (+4 more)
trunk/src/forcepad_kiosk/: CMakeLists.txt
trunk/src/forcepad_r/: FemGridSolver.h  SplashFrame.h
trunk/src/ivf2d/: Arch.h  Base.h  Clipboard.h  Color.cpp  CommonDefs.h  DrawableBase.h  Image.cpp  Image.h  IvfPointer.h  JpegImage.cpp  PngImage.cpp  Rectangle.h  ScreenImage.cpp  SgiImage.cpp  Vec3d.h
trunk/src/opt_solver/: Dofs.h  ElementProperty.cpp  Force.cpp  Force.h  ForceList.cpp  Mesh2d.cpp  Mesh2d.h  Node3d.cpp  Node3d.h  NodeList.cpp  Plani4.h  Plani4Mesh2d.cpp  Plani4Mesh2d.h  Point3d.h  rfem.cpp
trunk/src/opt_solver/matlab/: system_test.m
trunk/src/qtforcepad/: CMakeLists.txt  FemGridSolver2.cpp  PaintView.cpp  PaintView.h  forcepad_config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matlabgen.h  qtforcepad.qrc  qtpaintview.cpp
trunk/tests/: beam_example.fp2
(+644 files in other folders)
