include_directories(../ivf2d)
file(GLOB SOURCE_FILES1 *.cpp)
file(GLOB SOURCE_FILES2 *.cxx)
file(GLOB INCLUDE_FILES1 *.h)
file(GLOB INCLUDE_FILES2 *.H)

message("Build type in common = " ${CMAKE_BUILD_TYPE})

if (CMAKE_BUILD_TYPE STREQUAL Debug)
	message("Building debug version of libcommond")
	add_library(commond ${INCLUDE_FILES1} ${INCLUDE_FILES2} ${SOURCE_FILES1} ${SOURCE_FILES2})
else()
	message("Building release version of libcommond")
	add_library(common ${INCLUDE_FILES1} ${INCLUDE_FILES2} ${SOURCE_FILES1} ${SOURCE_FILES2})
endif()
