include_directories(../ivf2d)
file(GLOB SOURCE_FILES1 CONFIGURE_DEPENDS *.cpp)
file(GLOB SOURCE_FILES2 CONFIGURE_DEPENDS *.cxx)
file(GLOB INCLUDE_FILES1 CONFIGURE_DEPENDS *.h)
file(GLOB INCLUDE_FILES2 CONFIGURE_DEPENDS *.H)

add_library(common ${INCLUDE_FILES1} ${INCLUDE_FILES2} ${SOURCE_FILES1} ${SOURCE_FILES2})
set_target_properties(common PROPERTIES DEBUG_POSTFIX d)
target_include_directories(common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(common PUBLIC ivf2d)
