INCLUDE_DIRECTORIES(../ivf2d)
FILE(GLOB SOURCE_FILES1 *.cpp)
FILE(GLOB SOURCE_FILES2 *.cxx)
FILE(GLOB INCLUDE_FILES1 *.h)
FILE(GLOB INCLUDE_FILES2 *.H)
IF(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(commond ${INCLUDE_FILES1} ${INCLUDE_FILES2} ${SOURCE_FILES1} ${SOURCE_FILES2})
ELSE(CMAKE_BUILD_TYPE STREQUAL Debug)
	ADD_LIBRARY(common ${INCLUDE_FILES1} ${INCLUDE_FILES2} ${SOURCE_FILES1} ${SOURCE_FILES2})
ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)


